# workflow-orchestration-queue-zulu19

./: .ai-repository-summary.md  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  opencode.json  pyproject.toml  run_opencode_prompt.sh
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml
.github/workflows/prompts/: orchestrator-agent-prompt.md
.opencode/: package.json
.opencode/agents/: agent-instructions-expert.md  code-reviewer.md  data-scientist.md  documentation-expert.md  general.md  ml-engineer.md  mobile-developer.md  odbplusplus-expert.md  performance-optimizer.md  planner.md  prompt-engineer.md  researcher.md  scrum-master.md  security-expert.md
docs/: implementation-plan.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: devcontainer-opencode.sh
src/: notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh  test-watchdog-io-detection.sh
tests/: test_notifier_service.py
